--- a/project/cofooter.html
+++ b/project/cofooter.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="cofooter.css">
+    <style>
+
+    </style>
 </head>
 <body>
     <div id="upperpart">
@@ -70,6 +73,17 @@
      <p>Marketing Dictionary</p>   
     </div>
  </div>
-
+ <div id="last">
+     <div>
+         <p>© Copyright 2021, all rights reserved. See our <span>Terms & Policies</span></p>
+     </div>
+     <div id="slogo">
+         <img class="sociallogo" src="https://i.ibb.co/P6GNfgm/Screenshot-2021-12-16-134832.png" alt="facebook">
+         <img class="sociallogo" src="https://i.ibb.co/4VjxbFK/Screenshot-2021-12-16-135737-2.png" alt="twiter">
+         <img class="sociallogo" src="https://i.ibb.co/r4B51J4/Screenshot-2021-12-16-135737-3.png" alt="linkdin">
+         <img class="sociallogo" src="https://i.ibb.co/0mxkKYY/Screenshot-2021-12-16-135737-4.png" alt="pintrest">
+         <img class="sociallogo" src="https://i.ibb.co/qm2xB7s/Screenshot-2021-12-16-135737-5.png" alt="instagram">
+     </div>
+ </div>
 </body>
 </html>
