home page update

--- a/homepage_merge1.html
+++ b/homepage_merge1.html
@@ -271,8 +271,8 @@
             <h3>Marketing Calendar</h3>
             <p>A calendar that helps you see,schedule,and share your marketing</p>
            <ul> <span>✓</span>see everything together in one place </ul> 
-           <ul><span>✓</span>see everything together in one place </ul> 
-           <ul><span>✓</span>see everything together in one place </ul>  
+           <ul><span>✓</span>Share your progress with higher-ups </ul> 
+           <ul><span>✓</span>Show what your marketing is doing </ul>  
            <br>
            <button id="explore_button"> Explore</button>
            
@@ -300,8 +300,8 @@
             <p>A family of agile marketing products to coordinate your<br>
                  team, projects, and process.</p>
            <ul> <span>✓</span>Manage marketing requests </ul> 
-           <ul><span>✓</span>Manage marketing requests</ul> 
-           <ul><span>✓</span>sManage marketing requests</ul>   
+           <ul><span>✓</span>Eliminate content bottlenecks</ul> 
+           <ul><span>✓</span>Maximize resources to increase output</ul>   
            <button id="explore_button">Explore</button>   
         </div>
         <!-- <div class="box3">
@@ -322,11 +322,11 @@
         </div>
         <div class="text">
         <div class="box2">
-            <h3>Marketing Calendar</h3>
-            <p>A calendar that helps you see,schedule,and share your marketing</p>
-           <ul> <span class="tickdown">✓</span>see everything together in one place </ul> 
-           <ul><span class="tickdown">✓</span>see everything together in one place </ul> 
-           <ul><span class="tickdown">✓</span>see everything together in one place </ul> 
+            <h3>Headline Studio</h3>
+            <p>Write better headlines that will boost your traffic.</p>
+           <ul> <span class="tickdown">✓</span>Score your headlines based on proven data </ul> 
+           <ul><span class="tickdown">✓</span>Improve headlines with smart suggestions </ul> 
+           <ul><span class="tickdown">✓</span>Find the high-scoring words instantly </ul> 
            <button id="explore_button">Explore</button>     
         </div>
         <!-- <div class="explore3">
@@ -346,11 +346,12 @@
         </div>
         <div class="text">
         <div class="box2">
-            <h3>Marketing Calendar</h3>
-            <p>A calendar that helps you see,schedule,and share your marketing</p>
-           <ul> <span class="tickdown">✓</span>see everything together in one place </ul> 
-           <ul><span class="tickdown">✓</span>see everything together in one place </ul> 
-           <ul><span class="tickdown">✓</span>see everything together in one place </ul>  
+            <h3>Actionable Marketing Institute</h3>
+            <p>Develop new marketing skills in 30 minutes (or less).</p>
+           <ul> <span class="tickdown">✓</span>Improve your marketing with fluff-free training </ul> 
+           <ul><span class="tickdown">✓</span>Spend less time learning & more time doing </ul> 
+           <ul><span class="tickdown">✓</span>Learn from industry pros you trust
+           </ul>  
            <button id="explore_button">Explore</button>    
         </div>
         <!-- <div class="explore3">
