--- a/homepage.html
+++ b/homepage.html
@@ -113,10 +113,14 @@
 
         </div>
         <div id="displaydiv" >
-  <p>Notification</p>
-  <p>Recent</p>
-  <p>Favorites</p>
+            <div>
+                <p>Notification</p>
+                <p>Recent</p>
+                <p>Favorites</p>
+            </div>
   <hr>
+  <img src="https://app.coschedule.com/img/notifications-empty-1888c22fd951298ea32d6524dcd478f6.png" alt="">
+  <p>No New Notifications</p>
 
         </div>
     </div>
