--- a/signup.html
+++ b/signup.html
@@ -27,7 +27,7 @@
     <p>Website URL<p>
     <input class="in user_site" type="text"placeholder="Company Website URL " >
     <p>Password<p>
-        <input class="password" type="text"placeholder="Password " >
+        <input class="password" type="password"placeholder="Password " >
     <button  onclick="check()">Get Started Now</button> 
  <div>  <p id="footertext">By signing up, you agree to CoSchedule’s <span>terms of service, end user agreement, and privacy policy;</span>  you are 16 years or older; and you will receive information from CoSchedule from which you can opt out at any time.</p></div>
     
@@ -62,7 +62,7 @@
     document.querySelector(".email").value="";
     document.querySelector(".commpany_name").value="";
     document.querySelector(".user_site").value="";
-    window.location.href="signin.html";
+    window.location.href="signing.html";
 
   };
 
