--- a/homepage_merge1.html
+++ b/homepage_merge1.html
@@ -469,7 +469,7 @@ Marketing Calender</div>
      <img class="sociallogo" src="https://i.ibb.co/qm2xB7s/Screenshot-2021-12-16-135737-5.png" alt="instagram">
  </div>
 </div>
-
+<div></div>
 </body>
 </html>
 <script>
