--- a/homepage_merge1.html
+++ b/homepage_merge1.html
@@ -169,7 +169,7 @@
         </div>
         <div class="header_right_section">
          <p class="sign_in_link">Sign In </p>
-             <p class="sign_up_link">Start a trail</p>
+             <p class="demo_link">Start a trail</p>
              <button class="sign_up_link">Sign Up For Free</button>
  
         </div>
@@ -474,13 +474,20 @@ Marketing Calender</div>
 </html>
 <script>
     document.querySelector(".sign_up_link").addEventListener("click",function(){
-        window.location.href="signin.html";
+        window.location.href="signup.html";
 
     });
     document.querySelector(".sign_in_link").addEventListener("click",function(){
-        window.location.href="signin.html";
+        window.location.href="signing.html";
 
     });
+    document.querySelector(".demo_link").addEventListener("click",function(){
+        window.location.href="signing.html";
 
+    });
+    
+    document.querySelector(".pricing22").addEventListener("click",function(){
+        window.location.href="pricing.html";
 
+    });
 </script>
