--- a/homepage_merge1.html
+++ b/homepage_merge1.html
@@ -482,7 +482,7 @@ Marketing Calender</div>
 
     });
     document.querySelector(".demo_link").addEventListener("click",function(){
-        window.location.href="signing.html";
+        window.location.href="signup_demo.html";
 
     });
     
