sign-in and signup completed

--- a/freetrialdemo.html
+++ b/freetrialdemo.html
@@ -71,7 +71,7 @@
         }
         users.push(ob1);
         localStorage.setItem("user_details_demo",JSON.stringify(users));
-        window.location.href="dummypage.html";
+        window.location.href="homepage.html";
         
         }
         else{
