--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,17 @@
 
     </style>
 </head>
-<body>
+<body>  
+
+    <div id="pop_up">
+        <div></div>
+        <div> 
+            <h1>***Account Successfully Created***
+        </h1>
+        </div>
+        <div></div> 
+        
+    </div>
     <div id="upperbar">
         <img class="userpic" src="https://i.ibb.co/P6GNfgm/Screenshot-2021-12-16-134832.png" alt="facebook">
         <div>
