--- a/signing.html
+++ b/signing.html
@@ -62,7 +62,7 @@
         })
         if(c!==0){
           alert("Login Successful");
-            window.location.href="userpage.html";
+            window.location.href="homepage.html";
         }
         else{
           alert("Entered wrong details")
