--- a/signup.html
+++ b/signup.html
@@ -41,14 +41,15 @@
 </body>
 </html>
 <script>
-  var user_details=JSON.parse(localStorage.getItem("user_details1"))||[];
+  var user_details=JSON.parse(localStorage.getItem("user_details26"))||[];
   function check(){
     var name =document.querySelector(".name").value;
     var email=document.querySelector(".email").value;
     var Company_name=document.querySelector(".commpany_name").value;
     var website=document.querySelector(".user_site").value;
     var password1=document.querySelector(".password").value;
-    var ob={
+    if(name!=="" && email!=="" && Company_name!=="" && website !== "" && password1!==""){
+      var ob={
       name1:name,
       user_email:email,
       company:Company_name,
@@ -57,12 +58,18 @@
 
     }
     user_details.push(ob);
-    localStorage.setItem("user_details1",JSON.stringify(user_details));
+    localStorage.setItem("user_details26",JSON.stringify(user_details));
+    window.location.href="signing.html";
+    
+    }
+    else{
+      alert("Please Enter Proper Details")
+    }
     document.querySelector(".name").value="";
     document.querySelector(".email").value="";
     document.querySelector(".commpany_name").value="";
     document.querySelector(".user_site").value="";
-    window.location.href="signing.html";
+    
 
   };
 
