--- a/merge.html
+++ b/merge.html
@@ -36,9 +36,9 @@
                         <img src="https://coschedule.com/img/product/coschedule-marketing-calendar-product-icon-sm.png" id="logo_image" alt="">
                           </div>
                           <div id="Marketing_heading_text">
-                           <h2>Marketing Calendar</h2>
+                          Marketing Calendar
                             </div>
-                    </div> <div>
+                   
                     </div>
                 </div>
                 <div id="heading">
@@ -87,7 +87,7 @@
 
        <div id="footer_big_picture">
            <h2 class="footer_h1">"Before CoSchedule, everything was scattered between email and spreadsheets. With CoSchedule, I can easily organize all of my marketing and keep everyone on the same page."</h2>
-           <p>Beverly Cook, Director of Communications at NYC Leadership Center</p>
+           <p class="choco">Beverly Cook, Director of Communications at NYC Leadership Center</p>
        </div>
    </diV>
     
