--- a/signup.html
+++ b/signup.html
@@ -24,9 +24,9 @@
     <input class="in email" type="text"placeholder="Work Email Address">
     <p>Company</p>
     <input class="in commpany_name" type="text" placeholder="Company Name" >
-    <p>Website URL<p>
+    <p>Website URL</p>
     <input class="in user_site" type="text"placeholder="Company Website URL " >
-    <p>Password<p>
+    <p>Password</p>
         <input class="password" type="password"placeholder="Password " >
     <button  onclick="check()">Get Started Now</button> 
  <div>  <p id="footertext">By signing up, you agree to CoSchedule’s <span>terms of service, end user agreement, and privacy policy;</span>  you are 16 years or older; and you will receive information from CoSchedule from which you can opt out at any time.</p></div>
