--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="pricing_block">
-        <a href=""><img src="https://coschedule.com/img/cos-logo-full-color.svg" alt=""> </a>
+        <a href="hm.html"><img src="https://coschedule.com/img/cos-logo-full-color.svg" alt=""> </a>
         <div class="main_head">
             <h1>Organize Your Marketing With Content Calendar Software by CoSchedule</h1>
             <p>Try it free. No credit card required.</p>
@@ -59,7 +59,7 @@
                     <p id="letstalk">Let's Talk</p>
                     <a href=""></a>
                 </div>
-                <button>Get Started Free</button>
+                <button>Contact Sales</button>
                 <div id="box3">
                     <p style="padding-left: 15px ;color: grey;font-weight: bold ;font-size: small;">Includes all Marketing Calendar Pro capabilities, plus:</p>
                     <ul> <span class="tickdown">✓</span>Calendar Team Filtering
