--- a/freetrialdemo.html
+++ b/freetrialdemo.html
@@ -22,9 +22,9 @@
 
             <div id="inputdata">
                 <p>Email Address</p>
-                <input class="inpfree email1" type="text"placeholder="Work Email Address">
+                <input class="inpfree email1" type="email"placeholder="Work Email Address">
                 <p>Password</p>
-                <input class="inpfree password" type="text"placeholder="Password(minimum 8 characters)">
+                <input class="inpfree password" type="password"placeholder="Password(minimum 8 characters)">
                    <div>
                         <button onclick="get_details()">Get Started Now</button> 
                       <div>
