--- a/signing.html
+++ b/signing.html
@@ -22,7 +22,7 @@
             <br>
           <label class="secondlabel">PASSWORD</label>
                <br>
-                <input  id="password"type="text" placeholder="Password"/> 
+                <input  id="password"type="password" placeholder="Password"/> 
            
         <br>
            <!-- <button id=button>Sign In</button> -->
