--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
     <p>Full Name</p>
     <input class="in name" type="text" placeholder="Enter name">
     <p>Email Address</p>
-    <input class="in email" type="text"placeholder="Work Email Address">
+    <input class="in email" type="email"placeholder="Work Email Address">
     <p>Company</p>
     <input class="in commpany_name" type="text" placeholder="Company Name" >
     <p>Website URL</p>
